# Lab3_DevOps

./: .test.yml.swp  CMakeCache.txt  CMakeLists.txt  Dockerfile  HTTP_Server.cpp  HTTP_Server.h  Makefile  Makefile.am  Makefile.in  autoDeploy.sh  cmake_install.cmake  config.status  configure  configure.ac  deb.deb  func.cpp  func.h  main.cpp  mainServer.cpp  program  scriptA.sh  scriptB.sh  server  test.cpp  test_func.cpp  test_program  test_server
.deps/: func.Po
.github/workflows/: buildx.yml  test.yml  test_func.yml  test_server.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
